--- a/public/src/app/auth_app.component.html
+++ b/public/src/app/auth_app.component.html
@@ -2,7 +2,7 @@
 <div class="container">
 	<div class="row">
 		<div class="col">
-			<h1 class="text-align: center">Squishy Tomatoes</h1>
+			<h1 class="text-align: center">Favorite Authors</h1>
 		</div>
 	</div>
 	<div class="row">
