--- a/public/src/app/show/show.component.html
+++ b/public/src/app/show/show.component.html
@@ -1,3 +1,34 @@
-<p>
-  show works!
-</p>
+<div class="row">
+	<div class="col">
+		<button (click)="appAdd=!appAdd" class="btn btn-primary btn-sm m-3">Add a new movie</button>
+		<app-add *ngIf="appAdd"></app-add>
+	</div>
+</div>
+<div class="row">
+	<div class="col m-3 ">
+		<h4>Movie List:</h4>
+	</div>
+</div>
+
+<div class="row m-2">
+	<div class="col">
+		<table class="table table-striped">
+			<thead>
+				<th scope="col">Movie Title</th>
+				<th scope="col">Average Rating</th>
+      			<th scope="col">Actions</th>
+				
+			</thead>
+			<tbody>
+				<!-- <tr>
+					<td>Movie Title:</td>
+					<td>Actions:</td>
+				</tr> -->
+				<tr *ngFor="let movie of movies">
+					<td class="mr-3">{{movie["title"]}}</td><td class="mr-3">{{movie["avgRating"]}}</td><td><button (click)="showReviews(movie._id)" class="btn btn-primary btn-sm m-x-2">Read Reviews</button><button (click)="showWriteReview(movie._id)" class="btn btn-primary btn-sm">Write Review</button>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+</div>
+
